--- a/css/style.css
+++ b/css/style.css
@@ -40,11 +40,11 @@ body {
 }
 
 .header-border {
-    border-bottom: 3px solid #e78200;
+    border-bottom: 5px solid #e78200;
 }
 
 .header-border-first {
-    border-top: 3px solid #e78200;
+    border-top: 5px solid #e78200;
 }
 
 .banner {
@@ -65,6 +65,10 @@ body {
 .main-nav {
     background-color: #000;
     padding: 240px auto;
+}
+
+a:hover {
+    color: #e78200;
 }
 
 @media (max-width: 636px) {
