Make menu button clickable

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ body {
     width: 200px;
 }
 
+.active-flex {
+    display: flex;
+}
+
 .banner {
     background-image: url(../images/banner.jpg);
     background-position: center center;
