--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ body {
     background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.8) 70%, rgba(0, 0, 0, 0) 100%);
 }
 
+header {
+    background-color: rgba(0, 0, 0, 0.8);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 40%, rgba(0, 0, 0, 0.8) 70%, rgba(0, 0, 0, 0) 100%);
+}
+
 .header-logo {
     background-color: white;
 }
