--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,11 @@ a:hover {
     color: #e78200;
 }
 
+.link-dealer:hover {
+    color: white;
+}
+
+
 @media screen and (max-width: 1024px) {
     .nav-links {
         display: none;
